# plugins

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  go.mod  go.sum  main.go  server.toml
abi/include/: dragonfly_plugin.h
cmd/abi-gen/: items_test.go  main.go
cmd/bedrock-gophers/: main.go
cmd/block-gen/: main.go  main_test.go
cmd/csharp-build/: main.go  main_test.go
cmd/csharp-gen/: bbox.go  bbox_test.go  block_lookup.go  block_lookup_test.go  difficulty.go  difficulty_test.go  effect.go  effect_test.go  entity.go  entity_animation.go  entity_animation_test.go  entity_test.go  item_stack.go  item_test.go  main.go  main_test.go  packet.go  packet_test.go  packet_write.go  packet_write_test.go  player_cooldown.go  player_cooldown_test.go  player_identity.go  player_identity_test.go  player_item.go  player_item_action.go  player_item_action_test.go  player_item_test.go  player_kinematics.go  player_kinematics_test.go  player_presentation.go  player_presentation_test.go  player_skin.go  player_skin_test.go  player_state.go  player_state_test.go  player_transport.go  player_transport_test.go  server.go  server_test.go  (+12 more)
csharp/Dragonfly/: Block.Custom.cs  Block.CustomBlockData.cs  Block.Properties.cs  Cmd.cs  CommandBinding.cs  CommandRegistry.cs  ContainerMenu.cs  Inv.cs  Item.Custom.cs  Item.CustomItemData.cs  Item.Nbt.cs  Item.cs  Nbt.cs  Packet.cs  Player.ContainerMenu.cs  Player.cs  PluginBridge.cs  World.Entity.cs  World.EventTypes.cs  World.Identity.cs  World.NetworkEntityType.cs  World.cs
csharp/Dragonfly.Generator/: PluginEntryGenerator.cs
csharp/Dragonfly.Native/: Abi.cs
csharp/Dragonfly.Runtime/: Runtime.cs
docs/plans/: 2026-07-13-effect-snapshots-design.md  2026-07-13-lifecycle-bootstrap-design.md  2026-07-13-player-transfer-design.md  2026-07-13-player-transfer-implementation.md  2026-07-13-transferable-entities-implementation.md  csharp-plugin-architecture.md  rust-plugin-architecture.md
examples/: server.toml
examples/plugins/: README.md
framework/: config.go  config_test.go  core_world_policy.go  core_world_policy_test.go  csharp_entity_runtime_test.go  csharp_world_runtime_test.go  custom_block_client_transport.go  custom_block_client_transport_test.go  custom_blocks.go  custom_blocks_test.go  custom_items.go  custom_items_test.go  deferred_listener.go  deferred_listener_test.go  detached_entities.go  detached_entities_test.go  entities.go  entities_test.go  packet_intercept.go  packet_intercept_test.go  particles.go  particles_test.go  player_transfer.go  player_transfer_session_test.go  player_transfer_test.go  plugin_entities.go  plugin_entities_advanced.go  plugin_entities_test.go  provider_cleanup_test.go  run.go  run_cleanup.go  run_cleanup_test.go  run_lifecycle_test.go  sounds.go  sounds_test.go  world_defer_generated.go  world_schedule_test.go  world_spec.go  world_spec_open_test.go  world_spec_test.go  (+4 more)
internal/blockstate/: encode.go
internal/host/: armour_items_test.go  block_properties.go  block_properties_test.go  bucket_items_test.go  commands.go  commands_test.go  entities.go  entities_test.go  forms.go  game_mode.go  inventory_menus.go  inventory_menus_test.go  items.go  items_test.go  packets.go  packets_test.go  player_effect_snapshot_test.go  player_handler.go  player_handler_test.go  player_handles_test.go  player_item_action_generated.go  player_state_generated.go  players.go  players_test.go  server.go  sounds.go  (+4 more)
plugins/: Directory.Build.props
plugins/entity-command/: Cargo.toml  README.md
plugins/entity-command/src/: lib.rs
plugins/particle-command/: Cargo.toml
plugins/particle-command/src/: lib.rs
plugins/player-command/: Cargo.toml
plugins/player-command/src/: lib.rs
plugins/sound-command/: Cargo.toml  README.md
plugins/sound-command/src/: lib.rs
rust/dragonfly-plugin/: Cargo.toml
rust/dragonfly-plugin/src/: block.rs  blocks_generated.rs  damage.rs  effect.rs  entity.rs  form.rs  item_nbt.rs  items_generated.rs  items_generated_test.rs  lib.rs  lifecycle_test.rs  particle.rs  player_effect_snapshot_test.rs  player_state_generated.rs  player_transfer_test.rs  sound.rs  task.rs  task_test.rs  world.rs  world_block_test.rs  world_liquid_test.rs  world_spec_test.rs
schema/: items.yaml  player.yaml
scripts/: windows-build.ps1
(+119 files in other folders)
