[workspace]
members = [
    "rust/dragonfly-plugin",
    "rust/dragonfly-plugin-macros",
    "rust/dragonfly-plugin-sys",
    "rust/runtime",
    "examples/rust/chat-filter",
    "examples/rust/movement-guard",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.96"
