[package]
name = "entity-command-plugin"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.96"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
dragonfly-plugin = { git = "https://github.com/bedrock-gophers/plugins", rev = "35aae9850f9e9000cf84bddab97fab47491747a5" }
