[package]
name = "player-command-plugin"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.96"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
dragonfly-plugin = { git = "https://github.com/bedrock-gophers/plugins", rev = "fe704649d3b741390aa290d0c916cad4cbc1684f" }
