[package]
name = "player-command-plugin"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.96"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
dragonfly-plugin = { git = "https://github.com/bedrock-gophers/plugins", rev = "17be9955dedf342d158287b210c377a7a0a96f24" }
