[package]
name = "player-command-plugin"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.96"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
dragonfly-plugin = { git = "https://github.com/bedrock-gophers/plugins", rev = "ffd67dbacc7c471a8946c33755e80a004d6774bb" }
